--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   mobile_scanner: ^6.0.11
   intl: ^0.20.2
   qr_flutter: ^4.1.0
+  go_router: ^16.1.0
+  google_mlkit_face_detection: ^0.13.1
+  image: ^4.5.4
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
