--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   google_mlkit_face_detection: ^0.13.1
   image: ^4.5.4
   permission_handler: ^12.0.1
+  flutter_secure_storage: ^9.2.4
+  tflite_flutter: ^0.11.0
+  google_mlkit_commons: ^0.11.0
+  google_ml_kit: ^0.20.0
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +33,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/models/
