--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   camera: ^0.11.2
   http: ^1.5.0
+  dio: ^5.7.0
+  dio_cookie_manager: ^3.1.1
+  cookie_jar: ^4.0.8
   mobile_scanner: ^6.0.11
   intl: ^0.20.2
   qr_flutter: ^4.1.0
