--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   tflite_flutter: ^0.11.0
   google_mlkit_commons: ^0.11.0
   google_ml_kit: ^0.20.0
+  socket_io_client: ^2.0.3
 
 dev_dependencies:
   flutter_test:
