--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   local_auth: ^2.1.0
   crypto: ^3.0.2
   file_picker: ^8.1.2
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
