--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -20,6 +20,9 @@ plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     // update AGP to 8.6.x
     id "com.android.application" version "8.6.0" apply false
+    // START: FlutterFire Configuration
+    id "com.google.gms.google-services" version "4.3.15" apply false
+    // END: FlutterFire Configuration
     // kotlin plugin can stay or be bumped if you see compatibility errors
     id "org.jetbrains.kotlin.android" version "2.2.20" apply false
 }
