--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId = "com.example.frontend"
-        minSdk = 23  // Required by CameraX 1.5.0+
+        minSdkVersion = flutter.minSdkVersion  // Required by CameraX 1.5.0+
         targetSdk = 36
 
         versionCode = flutter.versionCode
